@@ -93,6 +93,10 @@ scanning_threads = 4
 
 # -- End of antivirus settings --
 
+# Listen on external interfaces. Disable this to avoid samba to listen on external interfaces, which may
+#be desirable in some environments.
+#listen_external = no
+
 # Show in the UI the textbox to choose the site where
 # the server should be added when joining a domain
 show_site_box = no
