@@ -8,6 +8,7 @@
     $roamingProfiles => 0
     $profilesPath
     $sysvolPath
+    $ifaces
 
     $print => 0
     $shares => 0
@@ -30,7 +31,9 @@ use EBox::Gettext;
 
 
     idmap_ldb:use rfc2307 = yes
-
+    
+    interfaces = <% $ifaces %>
+    bind interfaces only = yes
     log level = 3
     log file = /var/log/samba/samba.log
     max log size = 100000
