@@ -1,4 +1,6 @@
 HEAD
+	+ Added config file to enable samba to listen only on internal
+	interfaces
 	+ Allow restore backup when samba is not provisioned
 	+ Set roaming profile for new users
 4.0.6
